# fastapirecipe

./: .gitignore  pyproject.toml
app/: main.py  schemas.py
app/templates/: index.html
