[tool.poetry]
name = "recipe"
version = "0.1.0"
description = ""
authors = ["Josh Ajiniran <josuajiniran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
